--- a/applications/stream-applications-build/stream-applications-descriptor/src/main/resources/META-INF/kafka-apps-docker.properties
+++ b/applications/stream-applications-build/stream-applications-descriptor/src/main/resources/META-INF/kafka-apps-docker.properties
@@ -1,13 +1,16 @@
 source.file=docker:springcloudstream/file-source-kafka:@file-source-docker.tag@
+source.ftp=docker:springcloudstream/ftp-source-kafka:@ftp-source-docker.tag@
 source.geode=docker:springcloudstream/geode-source-kafka:@geode-source-docker.tag@
 source.http=docker:springcloudstream/http-source-kafka:@http-source-docker.tag@
 source.jdbc=docker:springcloudstream/jdbc-source-kafka:@jdbc-source-docker.tag@
+source.jms=docker:springcloudstream/jms-source-kafka:@jms-source-docker.tag@
 source.load-generator=docker:springcloudstream/load-generator-source-kafka:@load-generator-source-docker.tag@
 source.mongodb=docker:springcloudstream/mongodb-source-kafka:@mongodb-source-docker.tag@
 source.mqtt=docker:springcloudstream/mqtt-source-kafka:@mqtt-source-docker.tag@
 source.rabbit=docker:springcloudstream/rabbit-source-kafka:@rabbit-source-docker.tag@
 source.tcp=docker:springcloudstream/tcp-source-kafka:@tcp-source-docker.tag@
 source.time=docker:springcloudstream/time-source-kafka:@time-source-docker.tag@
+source.websocket=docker:springcloudstream/websocket-source-kafka:@websocket-source-docker.tag@
 sink.cassandra=docker:springcloudstream/cassandra-sink-kafka:@cassandra-sink-docker.tag@
 sink.counter=docker:springcloudstream/counter-sink-kafka:@counter-sink-docker.tag@
 sink.file=docker:springcloudstream/file-sink-kafka:@file-sink-docker.tag@
@@ -22,7 +25,9 @@ sink.redis=docker:springcloudstream/redis-sink-kafka:@redis-sink-docker.tag@
 sink.router=docker:springcloudstream/router-sink-kafka:@router-sink-docker.tag@
 sink.sftp=docker:springcloudstream/sftp-sink-kafka:@sftp-sink-docker.tag@
 sink.tcp=docker:springcloudstream/tcp-sink-kafka:@tcp-sink-docker.tag@
+sink.tasklauncher=docker:springcloudstream/tasklauncher-sink-kafka:@tasklauncher-sink-docker.tag@
 sink.throughput=docker:springcloudstream/throughput-sink-kafka:@throughput-sink-docker.tag@
+sink.websocket=docker:springcloudstream/websocket-sink-kafka:@websocket-sink-docker.tag@
 processor.bridge=docker:springcloudstream/bridge-processor-kafka:@bridge-processor-docker.tag@
 processor.filter=docker:springcloudstream/filter-processor-kafka:@filter-processor-docker.tag@
 processor.groovy=docker:springcloudstream/groovy-processor-kafka:@groovy-processor-docker.tag@
