--- a/applications/stream-applications-build/stream-applications-descriptor/src/main/resources/META-INF/kafka-apps-maven.properties
+++ b/applications/stream-applications-build/stream-applications-descriptor/src/main/resources/META-INF/kafka-apps-maven.properties
@@ -1,11 +1,15 @@
 source.file=maven://org.springframework.cloud.stream.app:file-source-kafka:@file-source.version@
 source.file.metadata=maven://org.springframework.cloud.stream.app:file-source-kafka:jar:metadata:@file-source.version@
+source.ftp=maven://org.springframework.cloud.stream.app:ftp-source-kafka:@ftp-source.version@
+source.ftp.metadata=maven://org.springframework.cloud.stream.app:ftp-source-kafka:jar:metadata:@ftp-source.version@
 source.geode=maven://org.springframework.cloud.stream.app:geode-source-kafka:@geode-source.version@
 source.geode.metadata=maven://org.springframework.cloud.stream.app:geode-source-kafka:jar:metadata:@geode-source.version@
 source.http=maven://org.springframework.cloud.stream.app:http-source-kafka:@http-source.version@
 source.http.metadata=maven://org.springframework.cloud.stream.app:http-source-kafka:jar:metadata:@http-source.version@
 source.jdbc=maven://org.springframework.cloud.stream.app:jdbc-source-kafka:@jdbc-source.version@
 source.jdbc.metadata=maven://org.springframework.cloud.stream.app:jdbc-source-kafka:jar:metadata:@jdbc-source.version@
+source.jms=maven://org.springframework.cloud.stream.app:jms-source-kafka:@jms-source.version@
+sourc.jms.metadata=maven://org.springframework.cloud.stream.app:jms-source-kafka:jar:metadata:@jms-source.version@
 source.load-generator=maven://org.springframework.cloud.stream.app:load-generator-source-kafka:@load-generator-source.version@
 source.load-generator.metadata=maven://org.springframework.cloud.stream.app:load-generator-source-kafka:jar:metadata:@load-generator-source.version@
 source.mongodb=maven://org.springframework.cloud.stream.app:mongodb-source-kafka:@mongodb-source.version@
@@ -18,6 +22,8 @@ source.tcp=maven://org.springframework.cloud.stream.app:tcp-source-kafka:@tcp-so
 source.tcp.metadata=maven://org.springframework.cloud.stream.app:tcp-source-kafka:jar:metadata:@tcp-source.version@
 source.time=maven://org.springframework.cloud.stream.app:time-source-kafka:@time-source.version@
 source.time.metadata=maven://org.springframework.cloud.stream.app:time-source-kafka:jar:metadata:@time-source.version@
+source.websocket=maven://org.springframework.cloud.stream.app:websocket-source-kafka:@websocket-source.version@
+source.websocket.metadata=maven://org.springframework.cloud.stream.app:websocket-source-kafka:jar:metadata:@websocket-source.version@
 sink.cassandra=maven://org.springframework.cloud.stream.app:cassandra-sink-kafka:@cassandra-sink.version@
 sink.cassandra.metadata=maven://org.springframework.cloud.stream.app:cassandra-sink-kafka:jar:metadata:@cassandra-sink.version@
 sink.counter=maven://org.springframework.cloud.stream.app:counter-sink-kafka:@counter-sink.version@
@@ -46,8 +52,12 @@ sink.sftp=maven://org.springframework.cloud.stream.app:sftp-sink-kafka:@sftp-sin
 sink.sftp.metadata=maven://org.springframework.cloud.stream.app:sftp-sink-kafka:jar:metadata:@sftp-sink.version@
 sink.tcp=maven://org.springframework.cloud.stream.app:tcp-sink-kafka:@tcp-sink.version@
 sink.tcp.metadata=maven://org.springframework.cloud.stream.app:tcp-sink-kafka:jar:metadata:@tcp-sink.version@
+sink.tasklauncher=maven://org.springframework.cloud.stream.app:tasklauncher-sink-kafka:@tasklauncher-sink.version@
+sink.tasklauncher.metadata=maven://org.springframework.cloud.stream.app:tasklauncher-sink-kafka:jar:metadata:@tasklauncher-sink.version@
 sink.throughput=maven://org.springframework.cloud.stream.app:throughput-sink-kafka:@throughput-sink.version@
 sink.throughput.metadata=maven://org.springframework.cloud.stream.app:throughput-sink-kafka:jar:metadata:@throughput-sink.version@
+sink.websocket=maven://org.springframework.cloud.stream.app:websocket-sink-kafka:@websocket-sink.version@
+sink.websocket.metadata=maven://org.springframework.cloud.stream.app:websocket-sink-kafka:jar:metadata:@websocket-sink.version@
 processor.bridge=maven://org.springframework.cloud.stream.app:bridge-processor-kafka:@bridge-processor.version@
 processor.bridge.metadata=maven://org.springframework.cloud.stream.app:bridge-processor-kafka:jar:metadata:@bridge-processor.version@
 processor.filter=maven://org.springframework.cloud.stream.app:filter-processor-kafka:@filter-processor.version@
