--- a/applications/stream-applications-build/stream-applications-descriptor/src/main/resources/META-INF/rabbit-apps-docker.properties
+++ b/applications/stream-applications-build/stream-applications-descriptor/src/main/resources/META-INF/rabbit-apps-docker.properties
@@ -1,13 +1,16 @@
 source.file=docker:springcloudstream/file-source-rabbit:@file-source-docker.tag@
+source.ftp=docker:springcloudstream/ftp-source-rabbit:@ftp-source-docker.tag@
 source.geode=docker:springcloudstream/geode-source-rabbit:@geode-source-docker.tag@
 source.http=docker:springcloudstream/http-source-rabbit:@http-source-docker.tag@
 source.jdbc=docker:springcloudstream/jdbc-source-rabbit:@jdbc-source-docker.tag@
+source.jms=docker:springcloudstream/jms-source-rabbit:@jms-source-docker.tag@
 source.load-generator=docker:springcloudstream/load-generator-source-rabbit:@load-generator-source-docker.tag@
 source.mongodb=docker:springcloudstream/mongodb-source-rabbit:@mongodb-source-docker.tag@
 source.mqtt=docker:springcloudstream/mqtt-source-rabbit:@mqtt-source-docker.tag@
 source.rabbit=docker:springcloudstream/rabbit-source-rabbit:@rabbit-source-docker.tag@
 source.tcp=docker:springcloudstream/tcp-source-rabbit:@tcp-source-docker.tag@
 source.time=docker:springcloudstream/time-source-rabbit:@time-source-docker.tag@
+source.websocket=docker:springcloudstream/websocket-source-rabbit:@websocket-source-docker.tag@
 sink.cassandra=docker:springcloudstream/cassandra-sink-rabbit:@cassandra-sink-docker.tag@
 sink.counter=docker:springcloudstream/counter-sink-rabbit:@counter-sink-docker.tag@
 sink.file=docker:springcloudstream/file-sink-rabbit:@file-sink-docker.tag@
@@ -22,7 +25,9 @@ sink.redis=docker:springcloudstream/redis-sink-rabbit:@redis-sink-docker.tag@
 sink.router=docker:springcloudstream/router-sink-rabbit:@router-sink-docker.tag@
 sink.sftp=docker:springcloudstream/sftp-sink-rabbit:@sftp-sink-docker.tag@
 sink.tcp=docker:springcloudstream/tcp-sink-rabbit:@tcp-sink-docker.tag@
+sink.tasklauncher=docker:springcloudstream/tasklauncher-sink-rabbit:@tasklauncher-sink-docker.tag@
 sink.throughput=docker:springcloudstream/throughput-sink-rabbit:@throughput-sink-docker.tag@
+sink.websocket=docker:springcloudstream/websocket-sink-rabbit:@websocket-sink-docker.tag@
 processor.bridge=docker:springcloudstream/bridge-processor-rabbit:@bridge-processor-docker.tag@
 processor.filter=docker:springcloudstream/filter-processor-rabbit:@filter-processor-docker.tag@
 processor.groovy=docker:springcloudstream/groovy-processor-rabbit:@groovy-processor-docker.tag@
