--- a/applications/stream-applications-build/stream-applications-descriptor/src/main/resources/META-INF/rabbit-apps-maven.properties
+++ b/applications/stream-applications-build/stream-applications-descriptor/src/main/resources/META-INF/rabbit-apps-maven.properties
@@ -1,11 +1,15 @@
 source.file=maven://org.springframework.cloud.stream.app:file-source-rabbit:@file-source.version@
 source.file.metadata=maven://org.springframework.cloud.stream.app:file-source-rabbit:jar:metadata:@file-source.version@
+source.ftp=maven://org.springframework.cloud.stream.app:ftp-source-rabbit:@ftp-source.version@
+source.ftp.metadata=maven://org.springframework.cloud.stream.app:ftp-source-rabbit:jar:metadata:@ftp-source.version@
 source.geode=maven://org.springframework.cloud.stream.app:geode-source-rabbit:@geode-source.version@
 source.geode.metadata=maven://org.springframework.cloud.stream.app:geode-source-rabbit:jar:metadata:@geode-source.version@
 source.http=maven://org.springframework.cloud.stream.app:http-source-rabbit:@http-source.version@
 source.http.metadata=maven://org.springframework.cloud.stream.app:http-source-rabbit:jar:metadata:@http-source.version@
 source.jdbc=maven://org.springframework.cloud.stream.app:jdbc-source-rabbit:@jdbc-source.version@
 source.jdbc.metadata=maven://org.springframework.cloud.stream.app:jdbc-source-rabbit:jar:metadata:@jdbc-source.version@
+source.jms=maven://org.springframework.cloud.stream.app:jms-source-rabbit:@jms-source.version@
+sourc.jms.metadata=maven://org.springframework.cloud.stream.app:jms-source-rabbit:jar:metadata:@jms-source.version@
 source.load-generator=maven://org.springframework.cloud.stream.app:load-generator-source-rabbit:@load-generator-source.version@
 source.load-generator.metadata=maven://org.springframework.cloud.stream.app:load-generator-source-rabbit:jar:metadata:@load-generator-source.version@
 source.mongodb=maven://org.springframework.cloud.stream.app:mongodb-source-rabbit:@mongodb-source.version@
@@ -18,6 +22,8 @@ source.tcp=maven://org.springframework.cloud.stream.app:tcp-source-rabbit:@tcp-s
 source.tcp.metadata=maven://org.springframework.cloud.stream.app:tcp-source-rabbit:jar:metadata:@tcp-source.version@
 source.time=maven://org.springframework.cloud.stream.app:time-source-rabbit:@time-source.version@
 source.time.metadata=maven://org.springframework.cloud.stream.app:time-source-rabbit:jar:metadata:@time-source.version@
+source.websocket=maven://org.springframework.cloud.stream.app:websocket-source-rabbit:@websocket-source.version@
+source.websocket.metadata=maven://org.springframework.cloud.stream.app:websocket-source-rabbit:jar:metadata:@websocket-source.version@
 sink.cassandra=maven://org.springframework.cloud.stream.app:cassandra-sink-rabbit:@cassandra-sink.version@
 sink.cassandra.metadata=maven://org.springframework.cloud.stream.app:cassandra-sink-rabbit:jar:metadata:@cassandra-sink.version@
 sink.counter=maven://org.springframework.cloud.stream.app:counter-sink-rabbit:@counter-sink.version@
@@ -46,8 +52,12 @@ sink.sftp=maven://org.springframework.cloud.stream.app:sftp-sink-rabbit:@sftp-si
 sink.sftp.metadata=maven://org.springframework.cloud.stream.app:sftp-sink-rabbit:jar:metadata:@sftp-sink.version@
 sink.tcp=maven://org.springframework.cloud.stream.app:tcp-sink-rabbit:@tcp-sink.version@
 sink.tcp.metadata=maven://org.springframework.cloud.stream.app:tcp-sink-rabbit:jar:metadata:@tcp-sink.version@
+sink.tasklauncher=maven://org.springframework.cloud.stream.app:tasklauncher-sink-rabbit:@tasklauncher-sink.version@
+sink.tasklauncher.metadata=maven://org.springframework.cloud.stream.app:tasklauncher-sink-rabbit:jar:metadata:@tasklauncher-sink.version@
 sink.throughput=maven://org.springframework.cloud.stream.app:throughput-sink-rabbit:@throughput-sink.version@
 sink.throughput.metadata=maven://org.springframework.cloud.stream.app:throughput-sink-rabbit:jar:metadata:@throughput-sink.version@
+sink.websocket=maven://org.springframework.cloud.stream.app:websocket-sink-rabbit:@websocket-sink.version@
+sink.websocket.metadata=maven://org.springframework.cloud.stream.app:websocket-sink-rabbit:jar:metadata:@websocket-sink.version@
 processor.bridge=maven://org.springframework.cloud.stream.app:bridge-processor-rabbit:@bridge-processor.version@
 processor.bridge.metadata=maven://org.springframework.cloud.stream.app:bridge-processor-rabbit:jar:metadata:@bridge-processor.version@
 processor.filter=maven://org.springframework.cloud.stream.app:filter-processor-rabbit:@filter-processor.version@
