--- a/applications/stream-applications-build/stream-applications-descriptor/src/main/resources/META-INF/kafka-apps-maven-repo-url.properties
+++ b/applications/stream-applications-build/stream-applications-descriptor/src/main/resources/META-INF/kafka-apps-maven-repo-url.properties
@@ -1,11 +1,15 @@
 source.file=https://@repo-spring-io@/org/springframework/cloud/stream/app/file-source-kafka/@file-source.version@/file-source-kafka-@file-source.version@.jar
 source.file.metadata=https://@repo-spring-io@/org/springframework/cloud/stream/app/file-source-kafka/@file-source.version@/file-source-kafka-@file-source.version@-metadata.jar
+source.ftp=https://@repo-spring-io@/org/springframework/cloud/stream/app/ftp-source-kafka/@ftp-source.version@/ftp-source-kafka-@ftp-source.version@.jar
+source.ftp.metadata=https://@repo-spring-io@/org/springframework/cloud/stream/app/ftp-source-kafka/@ftp-source.version@/ftp-source-kafka-@ftp-source.version@-metadata.jar
 source.geode=https://@repo-spring-io@/org/springframework/cloud/stream/app/geode-source-kafka/@geode-source.version@/geode-source-kafka-@geode-source.version@.jar
 source.geode.metadata=https://@repo-spring-io@/org/springframework/cloud/stream/app/geode-source-kafka/@geode-source.version@/geode-source-kafka-@geode-source.version@-metadata.jar
 source.http=https://@repo-spring-io@/org/springframework/cloud/stream/app/http-source-kafka/@http-source.version@/http-source-kafka-@http-source.version@.jar
 source.http.metadata=https://@repo-spring-io@/org/springframework/cloud/stream/app/http-source-kafka/@http-source.version@/http-source-kafka-@http-source.version@-metadata.jar
 source.jdbc=https://@repo-spring-io@/org/springframework/cloud/stream/app/jdbc-source-kafka/@jdb-source.version@/jdbc-source-kafka-@jdbc-source.version@.jar
 source.jdbc.metadata=https://@repo-spring-io@/org/springframework/cloud/stream/app/jdbc-source-kafka/@jdb-source.version@/jdbc-source-kafka-@jdbc-source.version@-metadata.jar
+source.jms=https://@repo-spring-io@/org/springframework/cloud/stream/app/jms-source-kafka/@jms-source.version@/jms-source-kafka-@jms-source.version@.jar
+source.jms.metadata=https://@repo-spring-io@/org/springframework/cloud/stream/app/jms-source-kafka/@jms-source.version@/jms-source-kafka-@jms-source.version@-metadata.jar
 source.load-generator=https://@repo-spring-io@/org/springframework/cloud/stream/app/load-generator-source-kafka/@load-generator-source.version@/load-generator-source-kafka-@load-generator-source.version@.jar
 source.load-generator.metadata=https://@repo-spring-io@/org/springframework/cloud/stream/app/load-generator-source-kafka/@load-generator-source.version@/load-generator-source-kafka-@load-generator-source.version@-metadata.jar
 source.mongodb=https://@repo-spring-io@/org/springframework/cloud/stream/app/mongodb-source-kafka/@mongodb-source.version@/mongodb-source-kafka-@mongodb-source.version@.jar
@@ -18,6 +22,8 @@ source.tcp=https://@repo-spring-io@/org/springframework/cloud/stream/app/tcp-sou
 source.tcp.metadata=https://@repo-spring-io@/org/springframework/cloud/stream/app/tcp-source-kafka/@tcp-source.version@/tcp-source-kafka-@tcp-source.version@-metadata.jar
 source.time=https://@repo-spring-io@/org/springframework/cloud/stream/app/time-source-kafka/@time-source.version@/time-source-kafka-@time-source.version@.jar
 source.time.metadata=https://@repo-spring-io@/org/springframework/cloud/stream/app/time-source-kafka/@time-source.version@/time-source-kafka-@time-source.version@-metadata.jar
+source.websocket=https://@repo-spring-io@/org/springframework/cloud/stream/app/websocket-source-kafka/@websocket-source.version@/websocket-source-kafka-@websocket-source.version@.jar
+source.websocket.metadata=https://@repo-spring-io@/org/springframework/cloud/stream/app/websocket-source-kafka/@websocket-source.version@/websocket-source-kafka-@websocket-source.version@-metadata.jar
 sink.cassandra=https://@repo-spring-io@/org/springframework/cloud/stream/app/cassandra-sink-kafka/@cassandra-sink.version@/cassandra-sink-kafka-@cassandra-sink.version@.jar
 sink.cassandra.metadata=https://@repo-spring-io@/org/springframework/cloud/stream/app/cassandra-sink-kafka/@cassandra-sink.version@/cassandra-sink-kafka-@cassandra-sink.version@-metadata.jar
 sink.counter=https://@repo-spring-io@/org/springframework/cloud/stream/app/counter-sink-kafka/@counter-sink.version@/counter-sink-kafka-@counter-sink.version@.jar
@@ -46,8 +52,12 @@ sink.sftp=https://@repo-spring-io@/org/springframework/cloud/stream/app/sftp-sin
 sink.sftp.metadata=https://@repo-spring-io@/org/springframework/cloud/stream/app/sftp-sink-kafka/@sftp-sink.version@/sftp-sink-kafka-@sftp-sink.version@-metadata.jar
 sink.tcp=https://@repo-spring-io@/org/springframework/cloud/stream/app/tcp-sink-kafka/@tcp-sink.version@/tcp-sink-kafka-@sftp-sink.version@.jar
 sink.tcp.metadata=https://@repo-spring-io@/org/springframework/cloud/stream/app/tcp-sink-kafka/@tcp-sink.version@/tcp-sink-kafka-@tcp-sink.version@-metadata.jar
+sink.tasklauncher=https://@repo-spring-io@/org/springframework/cloud/stream/app/tasklauncher-sink-kafka/@tasklauncher-sink.version@/tasklauncher-sink-kafka-@tasklauncher-sink.version@.jar
+sink.tasklauncher.metadata=https://@repo-spring-io@/org/springframework/cloud/stream/app/tasklauncher-sink-kafka/@tasklauncher-sink.version@/tasklauncher-sink-kafka-@tasklauncher-sink.version@-metadata.jar
 sink.throughput=https://@repo-spring-io@/org/springframework/cloud/stream/app/throughput-sink-kafka/@throughput-sink.version@/throughput-sink-kafka-@throughput-sink.version@.jar
 sink.throughput.metadata=https://@repo-spring-io@/org/springframework/cloud/stream/app/throughput-sink-kafka/@throughput-sink.version@/throughput-sink-kafka-@throughput-sink.version@-metadata.jar
+sink.websocket=https://@repo-spring-io@/org/springframework/cloud/stream/app/websocket-sink-kafka/@websocket-sink.version@/websocket-sink-kafka-@websocket-sink.version@.jar
+sink.websocket.metadata=https://@repo-spring-io@/org/springframework/cloud/stream/app/websocket-sink-kafka/@websocket-sink.version@/websocket-sink-kafka-@websocket-sink.version@-metadata.jar
 processor.bridge=https://@repo-spring-io@/org/springframework/cloud/stream/app/bridge-processor-kafka/@bridge-processor.version@/bridge-processor-kafka-@bridge-processor.version@.jar
 processor.bridge.metadata=https://@repo-spring-io@/org/springframework/cloud/stream/app/bridge-processor-kafka/@bridge-processor.version@/bridge-processor-kafka-@bridge-processor.version@-metadata.jar
 processor.filter=https://@repo-spring-io@/org/springframework/cloud/stream/app/filter-processor-kafka/@filter-processor.version@/filter-processor-kafka-@filter-processor.version@.jar
