--- a/applications/stream-applications-build/stream-applications-descriptor/src/main/resources/META-INF/rabbit-apps-maven-repo-url.properties
+++ b/applications/stream-applications-build/stream-applications-descriptor/src/main/resources/META-INF/rabbit-apps-maven-repo-url.properties
@@ -1,11 +1,15 @@
 source.file=https://@repo-spring-io@/org/springframework/cloud/stream/app/file-source-rabbit/@file-source.version@/file-source-rabbit-@file-source.version@.jar
 source.file.metadata=https://@repo-spring-io@/org/springframework/cloud/stream/app/file-source-rabbit/@file-source.version@/file-source-rabbit-@file-source.version@-metadata.jar
+source.ftp=https://@repo-spring-io@/org/springframework/cloud/stream/app/ftp-source-rabbit/@ftp-source.version@/ftp-source-rabbit-@ftp-source.version@.jar
+source.ftp.metadata=https://@repo-spring-io@/org/springframework/cloud/stream/app/ftp-source-rabbit/@ftp-source.version@/ftp-source-rabbit-@ftp-source.version@-metadata.jar
 source.geode=https://@repo-spring-io@/org/springframework/cloud/stream/app/geode-source-rabbit/@geode-source.version@/geode-source-rabbit-@geode-source.version@.jar
 source.geode.metadata=https://@repo-spring-io@/org/springframework/cloud/stream/app/geode-source-rabbit/@geode-source.version@/geode-source-rabbit-@geode-source.version@-metadata.jar
 source.http=https://@repo-spring-io@/org/springframework/cloud/stream/app/http-source-rabbit/@http-source.version@/http-source-rabbit-@http-source.version@.jar
 source.http.metadata=https://@repo-spring-io@/org/springframework/cloud/stream/app/http-source-rabbit/@http-source.version@/http-source-rabbit-@http-source.version@-metadata.jar
 source.jdbc=https://@repo-spring-io@/org/springframework/cloud/stream/app/jdbc-source-rabbit/@jdb-source.version@/jdbc-source-rabbit-@jdbc-source.version@.jar
 source.jdbc.metadata=https://@repo-spring-io@/org/springframework/cloud/stream/app/jdbc-source-rabbit/@jdb-source.version@/jdbc-source-rabbit-@jdbc-source.version@-metadata.jar
+source.jms=https://@repo-spring-io@/org/springframework/cloud/stream/app/jms-source-rabbit/@jms-source.version@/jms-source-rabbit-@jms-source.version@.jar
+source.jms.metadata=https://@repo-spring-io@/org/springframework/cloud/stream/app/jms-source-rabbit/@jms-source.version@/jms-source-rabbit-@jms-source.version@-metadata.jar
 source.load-generator=https://@repo-spring-io@/org/springframework/cloud/stream/app/load-generator-source-rabbit/@load-generator-source.version@/load-generator-source-rabbit-@load-generator-source.version@.jar
 source.load-generator.metadata=https://@repo-spring-io@/org/springframework/cloud/stream/app/load-generator-source-rabbit/@load-generator-source.version@/load-generator-source-rabbit-@load-generator-source.version@-metadata.jar
 source.mongodb=https://@repo-spring-io@/org/springframework/cloud/stream/app/mongodb-source-rabbit/@mongodb-source.version@/mongodb-source-rabbit-@mongodb-source.version@.jar
@@ -18,6 +22,8 @@ source.tcp=https://@repo-spring-io@/org/springframework/cloud/stream/app/tcp-sou
 source.tcp.metadata=https://@repo-spring-io@/org/springframework/cloud/stream/app/tcp-source-rabbit/@tcp-source.version@/tcp-source-rabbit-@tcp-source.version@-metadata.jar
 source.time=https://@repo-spring-io@/org/springframework/cloud/stream/app/time-source-rabbit/@time-source.version@/time-source-rabbit-@time-source.version@.jar
 source.time.metadata=https://@repo-spring-io@/org/springframework/cloud/stream/app/time-source-rabbit/@time-source.version@/time-source-rabbit-@time-source.version@-metadata.jar
+source.websocket=https://@repo-spring-io@/org/springframework/cloud/stream/app/websocket-source-rabbit/@websocket-source.version@/websocket-source-rabbit-@websocket-source.version@.jar
+source.websocket.metadata=https://@repo-spring-io@/org/springframework/cloud/stream/app/websocket-source-rabbit/@websocket-source.version@/websocket-source-rabbit-@websocket-source.version@-metadata.jar
 sink.cassandra=https://@repo-spring-io@/org/springframework/cloud/stream/app/cassandra-sink-rabbit/@cassandra-sink.version@/cassandra-sink-rabbit-@cassandra-sink.version@.jar
 sink.cassandra.metadata=https://@repo-spring-io@/org/springframework/cloud/stream/app/cassandra-sink-rabbit/@cassandra-sink.version@/cassandra-sink-rabbit-@cassandra-sink.version@-metadata.jar
 sink.counter=https://@repo-spring-io@/org/springframework/cloud/stream/app/counter-sink-rabbit/@counter-sink.version@/counter-sink-rabbit-@counter-sink.version@.jar
@@ -46,8 +52,12 @@ sink.sftp=https://@repo-spring-io@/org/springframework/cloud/stream/app/sftp-sin
 sink.sftp.metadata=https://@repo-spring-io@/org/springframework/cloud/stream/app/sftp-sink-rabbit/@sftp-sink.version@/sftp-sink-rabbit-@sftp-sink.version@-metadata.jar
 sink.tcp=https://@repo-spring-io@/org/springframework/cloud/stream/app/tcp-sink-rabbit/@tcp-sink.version@/tcp-sink-rabbit-@sftp-sink.version@.jar
 sink.tcp.metadata=https://@repo-spring-io@/org/springframework/cloud/stream/app/tcp-sink-rabbit/@tcp-sink.version@/tcp-sink-rabbit-@tcp-sink.version@-metadata.jar
+sink.tasklauncher=https://@repo-spring-io@/org/springframework/cloud/stream/app/tasklauncher-sink-rabbit/@tasklauncher-sink.version@/tasklauncher-sink-rabbit-@tasklauncher-sink.version@.jar
+sink.tasklauncher.metadata=https://@repo-spring-io@/org/springframework/cloud/stream/app/tasklauncher-sink-rabbit/@tasklauncher-sink.version@/tasklauncher-sink-rabbit-@tasklauncher-sink.version@-metadata.jar
 sink.throughput=https://@repo-spring-io@/org/springframework/cloud/stream/app/throughput-sink-rabbit/@throughput-sink.version@/throughput-sink-rabbit-@throughput-sink.version@.jar
 sink.throughput.metadata=https://@repo-spring-io@/org/springframework/cloud/stream/app/throughput-sink-rabbit/@throughput-sink.version@/throughput-sink-rabbit-@throughput-sink.version@-metadata.jar
+sink.websocket=https://@repo-spring-io@/org/springframework/cloud/stream/app/websocket-sink-rabbit/@websocket-sink.version@/websocket-sink-rabbit-@websocket-sink.version@.jar
+sink.websocket.metadata=https://@repo-spring-io@/org/springframework/cloud/stream/app/websocket-sink-rabbit/@websocket-sink.version@/websocket-sink-rabbit-@websocket-sink.version@-metadata.jar
 processor.bridge=https://@repo-spring-io@/org/springframework/cloud/stream/app/bridge-processor-rabbit/@bridge-processor.version@/bridge-processor-rabbit-@bridge-processor.version@.jar
 processor.bridge.metadata=https://@repo-spring-io@/org/springframework/cloud/stream/app/bridge-processor-rabbit/@bridge-processor.version@/bridge-processor-rabbit-@bridge-processor.version@-metadata.jar
 processor.filter=https://@repo-spring-io@/org/springframework/cloud/stream/app/filter-processor-rabbit/@filter-processor.version@/filter-processor-rabbit-@filter-processor.version@.jar
