Twitter functional apps
* Streaming source
* Add twitter search and messasge sources
* Add more twitter source, sink and processors
* Add IT tests for twitter update sink
* Add IT tests for twitter message sink
* Add IT tests for twitter trend processor
* twitter suppliers readme
* twitter consumers readme
* twitter functions readme
* Disable TwitterStreamSourceTests

--- a/applications/processor/pom.xml
+++ b/applications/processor/pom.xml
@@ -18,6 +18,7 @@
         <module>splitter-processor</module>
         <module>transform-processor</module>
         <module>script-processor</module>
+        <module>twitter-trend-processor</module>
     </modules>
 
 </project>
