--- a/functions/pom.xml
+++ b/functions/pom.xml
@@ -50,6 +50,7 @@
 		<module>common/metadata-store-common</module>
 		<module>common/mqtt-common</module>
 		<module>common/tcp-common</module>
+		<module>common/twitter-common</module>
 
 
 		<module>consumer/cassandra-consumer</module>
@@ -67,6 +68,7 @@
 		<module>consumer/tcp-consumer</module>
 		<module>consumer/websocket-consumer</module>
 		<module>consumer/s3-consumer</module>
+		<module>consumer/twitter-consumer</module>
 
 		<module>function/filter-function</module>
 		<module>function/header-enricher-function</module>
@@ -76,6 +78,7 @@
 		<module>function/splitter-function</module>
 		<module>function/tasklauncher-function</module>
 		<module>function/task-launch-request-function</module>
+		<module>function/twitter-function</module>
 
 		<module>supplier/file-supplier</module>
 		<module>supplier/ftp-supplier</module>
@@ -90,6 +93,7 @@
 		<module>supplier/rabbit-supplier</module>
 		<module>supplier/websocket-supplier</module>
 		<module>supplier/s3-supplier</module>
+		<module>supplier/twitter-supplier</module>
 
 		<module>spring-functions-parent</module>
 	</modules>
