Twitter functional apps - Streaming source
 Part of #6

--- a/applications/source/pom.xml
+++ b/applications/source/pom.xml
@@ -23,6 +23,6 @@
         <module>tcp-source</module>
         <module>rabbit-source</module>
         <module>websocket-source</module>
-        <module>s3-source</module>
+        <module>twitter-stream-source</module>
     </modules>
 </project>
