--- a/functions/pom.xml
+++ b/functions/pom.xml
@@ -50,6 +50,7 @@
 		<module>common/metadata-store-common</module>
 		<module>common/mqtt-common</module>
 		<module>common/tcp-common</module>
+		<module>common/twitter-common</module>
 
 
 		<module>consumer/cassandra-consumer</module>
@@ -89,7 +90,7 @@
 		<module>supplier/time-supplier</module>
 		<module>supplier/rabbit-supplier</module>
 		<module>supplier/websocket-supplier</module>
-		<module>supplier/s3-supplier</module>
+		<module>supplier/twitter-stream-supplier</module>
 
 		<module>spring-functions-parent</module>
 	</modules>
