--- a/applications/source/pom.xml
+++ b/applications/source/pom.xml
@@ -24,5 +24,7 @@
         <module>rabbit-source</module>
         <module>websocket-source</module>
         <module>twitter-stream-source</module>
+        <module>twitter-search-source</module>
+        <module>twitter-message-source</module>
     </modules>
 </project>
