--- a/applications/source/twitter-stream-source/src/main/resources/META-INF/dataflow-configuration-metadata-whitelist.properties
+++ b/applications/source/twitter-stream-source/src/main/resources/META-INF/dataflow-configuration-metadata-whitelist.properties
@@ -1,5 +1,5 @@
 configuration-properties.classes=org.springframework.cloud.fn.common.twitter.TwitterConnectionProperties,\
-  org.springframework.cloud.fn.supplier.twitter.stream.TwitterStreamSupplierProperties, \
-  org.springframework.cloud.fn.supplier.twitter.stream.TwitterStreamSupplierProperties$Filter, \
-  org.springframework.cloud.fn.supplier.twitter.stream.TwitterStreamSupplierProperties$Filter$BoundingBox, \
-  org.springframework.cloud.fn.supplier.twitter.stream.TwitterStreamSupplierProperties$Filter$Geocode
+  org.springframework.cloud.fn.supplier.twitter.status.stream.TwitterStreamSupplierProperties, \
+  org.springframework.cloud.fn.supplier.twitter.status.stream.TwitterStreamSupplierProperties$Filter, \
+  org.springframework.cloud.fn.supplier.twitter.status.stream.TwitterStreamSupplierProperties$Filter$BoundingBox, \
+  org.springframework.cloud.fn.supplier.twitter.status.stream.TwitterStreamSupplierProperties$Filter$Geocode
