fix merge conflict

--- a/functions/pom.xml
+++ b/functions/pom.xml
@@ -90,6 +90,7 @@
 		<module>supplier/time-supplier</module>
 		<module>supplier/rabbit-supplier</module>
 		<module>supplier/websocket-supplier</module>
+		<module>supplier/s3-supplier</module>
 		<module>supplier/twitter-supplier</module>
 
 		<module>spring-functions-parent</module>
