--- a/applications/source/pom.xml
+++ b/applications/source/pom.xml
@@ -23,6 +23,7 @@
         <module>tcp-source</module>
         <module>rabbit-source</module>
         <module>websocket-source</module>
+        <module>s3-source</module>
         <module>twitter-stream-source</module>
         <module>twitter-search-source</module>
         <module>twitter-message-source</module>
