Add IT tests for twitter trend processor

--- a/applications/processor/twitter-trend-processor/pom.xml
+++ b/applications/processor/twitter-trend-processor/pom.xml
@@ -38,6 +38,18 @@
             <artifactId>spring-boot-starter-json</artifactId>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>org.mock-server</groupId>
+            <artifactId>mockserver-netty</artifactId>
+            <version>5.10</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.mock-server</groupId>
+            <artifactId>mockserver-client-java</artifactId>
+            <version>5.10</version>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 
     <build>
