--- a/applications/sink/twitter-message-sink/pom.xml
+++ b/applications/sink/twitter-message-sink/pom.xml
@@ -66,7 +66,7 @@
                         <type>sink</type>
                         <version>${project.version}</version>
                         <configClass>org.springframework.cloud.fn.consumer.twitter.message.TwitterMessageConsumerConfiguration.class</configClass>
-                        <functionDefinition>byteArrayTextToString|sendDirectMessage</functionDefinition>
+                        <functionDefinition>byteArrayTextToString|sendDirectMessageConsumer</functionDefinition>
                     </generatedApp>
                     <dependencies>
                         <dependency>
