--- a/applications/processor/twitter-trend-processor/src/main/resources/META-INF/dataflow-configuration-metadata-whitelist.properties
+++ b/applications/processor/twitter-trend-processor/src/main/resources/META-INF/dataflow-configuration-metadata-whitelist.properties
@@ -1,3 +1,3 @@
-configuration-properties.classes=org.springframework.cloud.fn.twitter.TwitterTrendFunctionProperties, \
-  org.springframework.cloud.fn.twitter.TwitterTrendFunctionProperties$Closest
+configuration-properties.classes=org.springframework.cloud.fn.twitter.trend.TwitterTrendFunctionProperties, \
+  org.springframework.cloud.fn.twitter.trend.TwitterTrendFunctionProperties$Closest
 
